# inim-prime-protocol

./: .gitignore  LEGAL.md  README.md  pyproject.toml
inim/prime/native/: utils.py
inim/prime/native/models/: partitions.py
inim/prime/native/operations/: base.py  partitions.py
inim/prime/native/wire/: frame.py  header.py  payload.py  protocol.py
inim/prime/protocol/: const.py  utils.py
inim/prime/protocol/models/: __init__.py
inim/prime/protocol/operations/: __init__.py  base.py  partitions.py  terminals.py
inim/prime/protocol/wire/: __init__.py  cipher.py  frame.py  header.py  payload.py  protocol.py  transport.py
src/inim/prime/native/: const.py  utils.py
src/inim/prime/native/helpers/: __init__.py  partitions.py
src/inim/prime/native/operations/: __init__.py  base.py  partitions.py  terminals.py
src/inim/prime/native/operations/panel/: __init__.py  get_panel_info.py
src/inim/prime/native/operations/partitions/: __init__.py  const.py  get_partition_labels.py  get_partition_statuses.py  reset_partitions.py  set_partition_modes.py
src/inim/prime/native/operations/terminals/: __init__.py  const.py  get_terminal_labels.py  get_terminal_statuses.py
src/inim/prime/native/wire/: cipher.py  frame.py  header.py  payload.py  protocol.py  transport.py
tools/: filters.py  packets.py  repl.py  utils.py
