[project]
name = "inim-prime-native"
description = "Python library for INIM Prime native protocol"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "GPLv3" }
authors = [
    { name = "Pitscheider", email = "pitscheider@tuta.com" }
]

dependencies = [
    "pycryptodome",
]

[project.optional-dependencies]
dev = [
    "pyyaml",
    "scapy",
]
